# github-actions

./: LICENSE  README.md  dummy_code.py  pyproject.toml
.github/workflows/: build.yml  example-build.yml  local-build.yml  local-test.yml  run-build.yml  run-linting.yml  run-tests.yml  tests.yml
github_actions/: __init__.py
tests/: test_workflows.py
