[tool.poetry]
name = "github-actions"
version = "0.1.2"
description = "Define common workflows."
authors = ["voightp <vojtechpanek@seznam.cz>"]
license = "MIT"
packages = [
    { include = "github_actions" }
]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
