[project]
name = "github-actions"
version = "1.0.0"
description = "Define common workflows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "setuptools>=75.6.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
