[project]
name = "github-actions"
version = "1.0.4"
description = "Define common workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "setuptools>=82.0.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
